--- a/law_management/views/opposition_lawyer_view.xml
+++ b/law_management/views/opposition_lawyer_view.xml
@@ -37,12 +37,12 @@
                           <field name="opposition_id" readonly="1" />
                       </h1>
                       <h1>
-                        <field name="opposition_lawyer_name" placeholder="Name" required="1"/>
+                        <field name="opposition_lawyer_name" placeholder="Name" required="0"/>
                       </h1>
                   </div>
               <group>
                   <group string="General Information">
-                    <field name="opposition_lawyer_type" required="1"/>
+                    <field name="opposition_lawyer_type" required="0"/>
                     <field name="ol_or_company_reg_id" attrs="{'invisible':['|',('opposition_lawyer_type','=','individual'),('opposition_lawyer_type','=',False)]}"/>
                     <field name="ol_or_country_reg_id" attrs="{'invisible':['|',('opposition_lawyer_type','=','individual'),('opposition_lawyer_type','=',False)]}"/>
                     <field name="opposition_lawyer_nationality" attrs="{'invisible': ['|',('opposition_lawyer_type','=','organisation'),('opposition_lawyer_type','=',False)],'required':[('opposition_lawyer_type','=','individual')]}"/>
@@ -50,7 +50,7 @@
                   </group>
                   <group string="Contact Information">
                     <field name="opposition_phone" invisible="1"/>
-                    <field name="opposition_mobileP" required="1"/>
+                    <field name="opposition_mobileP" required="0"/>
                     <field name="opposition_mobileW" invisible="1"/>
                     <field name="opposition_emailP" invisible="1"/>
                     <field name="opposition_emailW" invisible="1"/>
@@ -201,10 +201,11 @@
               <sheet>
                   <group>
                     <group>
-                      <field name="opp_lawyer_document_id" required="1" options='{"no_open": True,"no_create": 1, "no_create_edit": 1}'/>
+                      <field name="opp_lawyer_document_id" required="0" options='{"no_open": True,"no_create": 1, "no_create_edit": 1}'/>
                       <field name="doc_name"/>
                       <field name="doc_no"/>
                       <field name="doc_id" widget="many2many_binary"/>
+                      <field name="category_id"/>
                     </group>
                     <group>
                       <field name="date"/>
